fixes alignment of items in login box

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -58,12 +58,12 @@ input {
 
 #standard-login {
 	flex: 0 0 180px;
-	margin: 20px 0;
+	margin: 10px 0;
 	padding: 10px;
 }
 
 #github-login {
-	margin: 20px auto;
+	margin: 5px auto;
 	flex: 0 0 280px;
 	display: flex;
 	flex-flow: row nowrap;
